--- a/index.html
+++ b/index.html
@@ -33,13 +33,11 @@
                     <li>Python</li>
                 </ul>
             </div>
-            <div>
                 <h3>Soft Skills</h3>
                 <ul>
                     <li>Communication</li>
                     <li>Teamwork</li>
                 </ul>
-            </div>
         </div>
     </section>
 
@@ -55,7 +53,7 @@
             </tr>
             <tr>
                 <td>10th</td>
-                <td>UNDERDEEP WORLD SCHOOL</td>
+                <td>SUNDERDEEP WORLD SCHOOL</td>
                 <td>CBSE</td>
                 <td>2021</td>
                 <td>94%</td>
@@ -102,3 +100,4 @@
 
 </body>
 </html>
+
