--- a/index.html
+++ b/index.html
@@ -33,11 +33,14 @@
                     <li>Python</li>
                 </ul>
             </div>
+
+            <div>
                 <h3>Soft Skills</h3>
                 <ul>
                     <li>Communication</li>
                     <li>Teamwork</li>
                 </ul>
+            </div>
         </div>
     </section>
 
@@ -100,4 +103,3 @@
 
 </body>
 </html>
-
